--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="chat-container">
         <div class="chat-header">
             <img id="robot-logo" class="logo excited" src="https://i.imgur.com/R71qkMV.png" alt="HRWeb AI Logo" />
-            <h1 class="chat-title">Hrweb AI Asistanı</h1>
+            <h1 class="chat-title">Hrweb Yapay Zeka Asistanı Xoi</h1>
         </div>
         
         <div class="chat-box" id="chat-box">
